--- a/Import/Import.csproj
+++ b/Import/Import.csproj
@@ -8,32 +8,32 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <None Remove="Files\NASDAQ.csv" />
-    <None Remove="Files\NASDAQ.txt" />
-    <None Remove="Files\PortfolioValueHistory\PortfolioValueHistory.csv" />
-    <None Remove="Files\PortfolioValueHistory\PortfolioValueHistory.txt" />
-    <None Remove="Files\Stock\Stock.csv" />
-    <None Remove="Files\Stock\Stock.txt" />
-    <None Remove="Files\Transaction\Transaction.csv" />
-    <None Remove="Files\Transaction\Transaction.txt" />
-    <None Remove="Files\UserPortfolio\UserPortfolio.csv" />
-    <None Remove="Files\UserPortfolio\UserPortfolio.txt" />
-    <None Remove="Files\User\User.csv" />
-    <None Remove="Files\User\User.txt" />
+    <None Remove="Resources\Files\NASDAQ.csv" />
+    <None Remove="Resources\Files\NASDAQ.txt" />
+    <None Remove="Resources\PortfolioValueHistory\PortfolioValueHistory.csv" />
+    <None Remove="Resources\PortfolioValueHistory\PortfolioValueHistory.txt" />
+    <None Remove="Resources\Stock\Stock.csv" />
+    <None Remove="Resources\Stock\Stock.txt" />
+    <None Remove="Resources\Transaction\Transaction.csv" />
+    <None Remove="Resources\Transaction\Transaction.txt" />
+    <None Remove="Resources\UserPortfolio\UserPortfolio.csv" />
+    <None Remove="Resources\UserPortfolio\UserPortfolio.txt" />
+    <None Remove="Resources\User\User.csv" />
+    <None Remove="Resources\User\User.txt" />
   </ItemGroup>
 
   <ItemGroup>
     <EmbeddedResource Include="Configs\Config.json" />
-    <EmbeddedResource Include="Files\PortfolioValueHistory\PortfolioValueHistory.csv" />
-    <EmbeddedResource Include="Files\PortfolioValueHistory\PortfolioValueHistory.txt" />
-    <EmbeddedResource Include="Files\Stock\Stock.csv" />
-    <EmbeddedResource Include="Files\Stock\Stock.txt" />
-    <EmbeddedResource Include="Files\Transaction\Transaction.csv" />
-    <EmbeddedResource Include="Files\Transaction\Transaction.txt" />
-    <EmbeddedResource Include="Files\UserPortfolio\UserPortfolio.csv" />
-    <EmbeddedResource Include="Files\UserPortfolio\UserPortfolio.txt" />
-    <EmbeddedResource Include="Files\User\User.csv" />
-    <EmbeddedResource Include="Files\User\User.txt" />
+    <EmbeddedResource Include="Resources\PortfolioValueHistory\PortfolioValueHistory.csv" />
+    <EmbeddedResource Include="Resources\PortfolioValueHistory\PortfolioValueHistory.txt" />
+    <EmbeddedResource Include="Resources\Stock\Stock.csv" />
+    <EmbeddedResource Include="Resources\Stock\Stock.txt" />
+    <EmbeddedResource Include="Resources\Transaction\Transaction.csv" />
+    <EmbeddedResource Include="Resources\Transaction\Transaction.txt" />
+    <EmbeddedResource Include="Resources\UserPortfolio\UserPortfolio.csv" />
+    <EmbeddedResource Include="Resources\UserPortfolio\UserPortfolio.txt" />
+    <EmbeddedResource Include="Resources\User\User.csv" />
+    <EmbeddedResource Include="Resources\User\User.txt" />
   </ItemGroup>
 
   <ItemGroup>
