Removed Connection Strings

--- a/StocksAPI/appsettings.json
+++ b/StocksAPI/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Port=3306;Database=stocks;User Id=root;Password=Password;"
+    "DefaultConnection": ""
   },
   "Logging": {
     "LogLevel": {
